# weld_deps_template

./: pyproject.toml  stable_cache.json
.github/workflows/: artifact.yml  push-to-smithed.py  release.yml
src/data/template/function/impl/: load.mcfunction  print_version.mcfunction  test_load.mcfunction
template/: __init__.py  plugin.py
